--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 REACT_APP_ATLAS_URI=mongodb+srv://test:test@cluster0.meyalel.mongodb.net/
-REACT_APP_PORT=5000 # test comment 2
+REACT_APP_PORT=5000
